@@ -483,6 +483,7 @@ operator {
 	 * rehash       - allows oper to REHASH config
 	 * die          - allows DIE
 	 * restart      - allows RESTART
+	 * set          - allows SET
 	 * admin        - gives admin privileges. admins for example,
 	 *                may see the real IP addresses of servers.
 	 */
