@@ -144,7 +144,7 @@ operator {
 	#rsa_public_key_file = "/usr/local/ircd/etc/oper.pub";
 	class = "opers";
 	flags = global_kill, remote, kline, unkline, gline, module,
-		xline, die, rehash, nick_changes, admin;
+		xline, die, rehash, nick_changes, admin, set;
 };
 
 /* connect {}: controls servers we connect to (OLD C:, N:, H:, L:) */
